tests/test_files/errors/fuzz9.over
 # Comment
 a1: 1 a2: 2
 aa: 0 #
b: "Smörgåsbord"#
 c: 10# Comment
d: 20 #Comment
# Comment "with a string"
eee: 2
# Comment
 f: 3


# Multi-line
# Comment


g_: 4
^: null
s: '\#' t*: '\n' u: ' '
